# CVT

./: .gitignore  CMakeLists.txt  README.md  VicBuild.sublime-build
src/: Camera.cpp  Camera.h  CentralWidget.cpp  CentralWidget.h  CvThread.cpp  CvThread.h  CvThreadWorker.cpp  CvView.cpp  CvView.h  Globals.cpp  Globals.h  MainWindow.cpp  MainWindow.h  MessageBus.cpp  MessageBus.h  PCPWidget.cpp  PCPWidget.h  PIMotionDetect.cpp  PIMotionDetect.h  PreviewGrid.cpp  PreviewGrid.h  ProcessChain.cpp  ProcessChain.h  ProcessItemBase.cpp  ProcessItemBase.h  VideoWidget.cpp  VideoWidget.h  borrowed.h  common.h  main.cpp
